# rusttracer

./: Cargo.toml  README.md  checklist.md  requirements.md
configurations/: hard-box.yml  monte-carlo.yml  template.yml
scenes/: cube.mtl  glowstone.mtl  hard-box.mtl  house.mtl  m_box.mtl  monte-carlo.mtl  torch.mtl
src/: error.rs  main.rs  renderer.rs
src/config/: corecount.rs  defaults.rs  error.rs  mod.rs  run.rs
src/datastructure/: basic.rs  intersection.rs  mod.rs  precalculated.rs
src/datastructure/bvh/: boundingbox.rs  boxintersection.rs  mod.rs  node.rs
src/datastructure/kdtree/: boundingbox.rs  mod.rs  node.rs
src/generator/: basic.rs  crossbeam.rs  mod.rs  rayon.rs
src/old/: material.rs  pointlight.rs  raytracer.rs
src/postprocessors/: gamma.rs  group.rs  identity.rs  mod.rs
src/previewer/: mod.rs
src/raytracer/: basic.rs  crossbeamjmstrace.rs  jmstrace.rs  jmstracer.rs  mod.rs  mstrace.rs  mstracer.rs  rayon.rs
src/renderer/: builder.rs  mod.rs
src/scene/: error.rs  material.rs  mod.rs  scene.rs  texturecoordinate.rs  triangle.rs
src/scene/light/: mod.rs
src/setup/: glowstone_gamma.rs  hard_box_bhv.rs  house_bvh.rs  house_cb.rs  mc_cornell_box_gamma.rs  mod.rs  monte_carlo.rs  monte_carlo_bvh.rs  monte_carlo_crossbeam.rs  monte_carlo_gamma.rs  monte_carlo_kdtree.rs  monte_carlo_preview.rs
src/shader/: mcshader.rs  mod.rs  mtlshader.rs  shaders.rs  testshader.rs  vmcshader.rs
src/util/: camera.rs  color.rs  consts.rs  mod.rs  outputbuffer.rs  ray.rs  rng.rs  triangle.rs  vector.rs
validation/MSE/: MSE.py  notes
(+2 files in other folders)
