[package]
name = "rusttracer"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
lto = true


[dependencies]
bmp = "0.5.0"
rayon = "1.3.0"
tobj = "0.1.12"
lazy_static = "1.4.0"
rand = "0.7.3"
image = "0.23.2"
log = "0.4.8"
simple-logging = "2.0.2"
glium = "0.27.0"